fix: prevent top level checkbox overlap (fixes #292)

--- a/src/assets/styles/components/_input.scss
+++ b/src/assets/styles/components/_input.scss
@@ -254,6 +254,7 @@ input[type="radio"] {
 input[type="checkbox"],
 [role="checkbox"] {
 	cursor: default;
+	margin-right: rem(40);
 
 	&::before {
 		margin-right: rem(8);
